--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 </head>
 <body>
 
-  
+  <div class="content">
+    <div class="getinfo-content"></div>
+    <div class="display-content"></div>
+  </div>
 
 </body>
 </html>
