add func to get and add new book

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <body>
 
   <div class="content">
-    <div class="getinfo-content"></div>
+    <div class="getinfo-content">
+      <button class="add-book">Add a Book</button>
+    </div>
     <div class="display-content"></div>
   </div>
 
