made the book blo

--- a/index.html
+++ b/index.html
@@ -14,7 +14,19 @@
     <div class="getinfo-content">
       <button class="add-book">Add a Book</button>
     </div>
-    <div class="display-content"></div>
+    <div class="display-content">
+      <div class="book-content">
+        <div class="book-img"></div>
+        <div class="book-details">
+          <div class="title"></div>
+          <div class="author"></div>
+          <div class="pages"></div>
+          <div class="status"></div>
+        </div>
+      </div>
+      <div class="book-content"></div>
+     
+    </div>
   </div>
 
 </body>
