--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
       <div class="book-content">
         <div class="book-img"></div>
         <div class="book-details">
-          <div class="title"></div>
-          <div class="author"></div>
-          <div class="pages"></div>
-          <div class="status"></div>
+          <div class="title">Title</div>
+          <div class="author">Author</div>
+          <div class="pages">Pages</div>
+          <div class="status">status</div>
         </div>
       </div>
       <div class="book-content"></div>
