--- a/index.html
+++ b/index.html
@@ -1,54 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Library</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Library</title>
 
-  <link rel="stylesheet" href="style.css">
-  <script src="script.js" defer></script>
-</head>
-<body>
-
-  <div class="content">
-    <div class="getinfo-content">
-      <!-- <button class="add-book">Add a Book</button> -->
-      <form action="get">
-        <ul>
-          <li>
-            <input type="text" id="title" name="title" placeholder="Harry Potter">
-            <label for="title"></label>
-          </li>
-          <li>
-            <input type="text" id="author" name="author">
-            <label for="author"></label>
-          </li>
-          <li>
-            <input type="number" id="pages" name="pages">
-            <label for="pages"></label>
-          </li>
-          <li>
-            <input type="button" id="status" name="status">
-            <label for="status"></label>
-          </li>
-        </ul>
-      </form>
-
-    </div>
-    <div class="display-content">
-      <div class="book-content">
-        <div class="book-img"><img src="book.jpg" alt="book image"></div>
-        <div class="book-details">
-          <div class="title">Title</div>
-          <div class="author">Author</div>
-          <div class="pages">Pages</div>
-          <div class="status">status</div>
+    <link rel="stylesheet" href="style.css" />
+    <script src="script.js" defer></script>
+  </head>
+  <body>
+    <div class="content">
+      <div class="getinfo-content">
+        <!-- <button class="add-book">Add a Book</button> -->
+        <form action="get">
+          <ul>
+            <li>
+              <label for="title">Title</label>
+              <input
+                type="text"
+                id="title"
+                name="title"
+                placeholder="Harry Potter"
+              />
+            </li>
+            <li>
+              <label for="author">Author</label>
+              <input type="text" id="author" name="author" />
+            </li>
+            <li>
+              <label class="pages" for="pages">Number of Pages</label>
+              <input type="number" id="pages" name="pages" />
+            </li>
+            <li>
+              <label for="status">Read Status</label>
+              <select name="status" id="status">
+                <option value="Read">Read</option>
+                <option value="not-read">Not Read</option>
+              </select>
+            </li>
+          </ul>
+        </form>
+      </div>
+      <div class="display-content">
+        <div class="book-content">
+          <div class="book-img"><img src="book.jpg" alt="book image" /></div>
+          <div class="book-details">
+            <div class="title">Title</div>
+            <div class="author">Author</div>
+            <div class="pages">Pages</div>
+            <div class="status">status</div>
+          </div>
         </div>
       </div>
-
-     
     </div>
-  </div>
-
-</body>
+  </body>
 </html>
