finished the form style

--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
                 <option value="not-read">Not Read</option>
               </select>
             </li>
+            <li class="submit-button-class">
+              <label for="submit-button">Submit</label>
+              <button type="button" id="submit-button">Add</button>
+            </li>
           </ul>
         </form>
       </div>
