made the form work

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="content">
       <div class="getinfo-content">
         <!-- <button class="add-book">Add a Book</button> -->
-        <form action="get">
+        <form action="get" class="book-form">
           <ul>
             <li>
               <label for="title">Title</label>
