--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </div>
       <div class="display-content">
         <div class="book-content">
-          <div class="book-img"><img src="book.jpg" alt="book image" /></div>
+          <div class="book-img"><img src="Magic book_.jpg" alt="book image" /></div>
           <div class="book-details">
             <div class="title">Title</div>
             <div class="author">Author</div>
