--- a/index.html
+++ b/index.html
@@ -47,12 +47,15 @@
       </div>
       <div class="display-content">
         <div class="book-content">
-          <div class="book-img"><img src="Magic book_.jpg" alt="book image" /></div>
+          <div class="book-img">
+            <img src="Magic book_.jpg" alt="book image" />
+          </div>
           <div class="book-details">
-            <div class="title">Title</div>
-            <div class="author">Author</div>
-            <div class="pages">Pages</div>
-            <div class="status">status</div>
+            <div class="title" class="custom-div">Title</div>
+            <div class="author" class="custom-div">Author</div>
+            <div class="pages" class="custom-div">Pages</div>
+            <div class="status" class="custom-div">status</div>
+            <button class="delete-book">  delete </button>
           </div>
         </div>
       </div>
